public/lite/api/en/r1.6/_sources/generate/program_listing_file_include_core_ops_custom.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _program_listing_file_include_core_ops_custom.h:

Program Listing for File custom.h
=================================

|exhale_lsh| :ref:`Return to documentation for file <file_include_core_ops_custom.h>` (``include/core/ops/custom.h``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   
   #ifndef MINDSPORE_CORE_OPS_CUSTOM_H_
   #define MINDSPORE_CORE_OPS_CUSTOM_H_
   #include <string>
   #include <utility>
   #include <vector>
   #include <map>
   #include <memory>
   #include "ops/primitive_c.h"
   #include "ops/op_utils.h"
   #include "ir/anf.h"
   
   namespace mindspore {
   namespace ops {
   constexpr auto kNameCustom = "Custom";
   class MS_CORE_API Custom : public PrimitiveC {
    public:
     Custom() : PrimitiveC(kNameCustom) {}
   
     ~Custom() override = default;
   
     MS_DECLARE_PARENT(Custom, PrimitiveC);
   
     void Init(const std::string &type, const std::map<std::string, std::vector<uint8_t>> &attrs);
   
     void set_type(const std::string &type);
   
     std::string get_type() const;
   
     void set_attr(const std::map<std::string, std::vector<uint8_t>> &attrs);
   
     std::map<std::string, std::vector<uint8_t>> get_attr() const;
   };
   
   }  // namespace ops
   }  // namespace mindspore
   
   #endif  // MINDSPORE_CORE_OPS_CUSTOM_H_
